force-app/main/default/objects/Affiliation__c/fields/Affiliated_Account__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>