force-app/main/default/objects/Affiliation__c/fields/Affiliated_Description__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Description__c</fullName>
    <label>Affiliated Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>