force-app/main/default/objects/Affiliation__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <label>Affiliation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Board Membership</fullName>
            </value>
            <value>
                <fullName>Business Acquaintance</fullName>
            </value>
            <value>
                <fullName>Business Associates</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>Current Employer</fullName>
            </value>
            <value>
                <fullName>Past Employer</fullName>
            </value>
            <value>
                <fullName>Philanthropy</fullName>
            </value>
            <value>
                <fullName>Political Affiliation</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Social Associates</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Undergrad</fullName>
            </value>
            <value>
                <fullName>Grad</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Mgmt Consultant</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Investment Bank</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>Parent Company</fullName>
            </value>
            <value>
                <fullName>Private Bank</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>