force-app/main/default/objects/Affiliation__c/fields/Committee_Name__c.field-meta.xml
<CustomField>
    <fullName>Committee_Name__c</fullName>
    <label>Committee Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>House Appropriations Committee</fullName>
            </value>
            <value>
                <fullName>House Budget Committee</fullName>
            </value>
            <value>
                <fullName>House Committee on Financial Services (Banking Committee)</fullName>
            </value>
            <value>
                <fullName>House Ways &amp; Means Committee</fullName>
            </value>
            <value>
                <fullName>Joint Committee on Taxation</fullName>
            </value>
            <value>
                <fullName>Joint Economic Committee</fullName>
            </value>
            <value>
                <fullName>Senate Appropriations Committee</fullName>
            </value>
            <value>
                <fullName>Senate Budget Committee</fullName>
            </value>
            <value>
                <fullName>Senate Committee on Banking, Housing &amp; Urban Affairs</fullName>
            </value>
            <value>
                <fullName>Senate Finance Committee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>