force-app/main/default/objects/Affiliation__c/fields/Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliations (Contact 2)</relationshipLabel>
    <relationshipName>Affiliations1</relationshipName>
    <type>Lookup</type>
</CustomField>