force-app/main/default/objects/Affiliation__c/fields/Policital_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Policital_Affiliation__c</fullName>
    <label>Policital Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Affiliation_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Democrat</fullName>
            </value>
            <value>
                <fullName>Republican</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>