force-app/main/default/objects/Affiliation__c/fields/Related_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations (Related Account 2)</relationshipLabel>
    <relationshipName>Affiliations2</relationshipName>
    <type>Lookup</type>
</CustomField>