force-app/main/default/objects/Affiliation__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related</relationshipLabel>
    <relationshipName>Affiliations1</relationshipName>
    <type>Lookup</type>
</CustomField>