force-app/main/default/objects/Affiliation__c/fields/Sub_Committee_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Committee_Name__c</fullName>
    <label>Sub-Committee Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Committee_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SC1</fullName>
            </value>
            <value>
                <fullName>SC2</fullName>
            </value>
            <value>
                <fullName>SC3</fullName>
            </value>
            <value>
                <fullName>SC4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>