force-app/main/default/objects/Affiliation__c/recordTypes/Alianza_Affiliation_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Alianza_Affiliation_Record_Type</fullName>
    <active>true</active>
    <label>Alianza Affiliation Record Type</label>
</RecordType>