force-app/main/default/objects/Affiliation__c/recordTypes/Master_Affiliation_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Master_Affiliation_Record_Type</fullName>
    <active>true</active>
    <label>Master Affiliation Record Type</label>
</RecordType>